--- a/Surge/blackmatrix7.conf
+++ b/Surge/blackmatrix7.conf
@@ -56,6 +56,8 @@ hijack-dns = 8.8.8.8:53, 8.8.4.4:53
 # > Surge VIF
 tun-excluded-routes = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 239.255.255.250/32
 tun-included-routes = 192.168.1.12/32
+# > 如果没有代理服务器支持 UDP 转发，可修改为「 direct 」或注释下条，但需注意同一目标主机名 TCP 请求与 UDP 请求的源地址不同所造成的隐私及安全风险。
+# udp-policy-not-supported-behaviour = reject
 
 [Replica]
 # > 隐藏 Apple 请求
